# river

./: setup.py
river/decomposition/: __init__.py  rust_rolling_dmd.py  test_rust_rolling_dmd.py
rust_decomp/: Cargo.toml
rust_decomp/src/: lib.rs  linalg.rs  online_dmd.rs  online_dmdwc.rs  online_svd.rs  rolling_dmd.rs  rolling_dmdwc.rs
