[package]
name = "rust_decomp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_decomp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
numpy = "0.27"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
simba = "0.9"
lapack = "0.19"
lapack-src = { version = "0.10", features = ["accelerate"] }
blas-src = { version = "0.10", features = ["accelerate"] }
num-complex = { version = "0.4", features = ["serde"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
